--- a/style.css
+++ b/style.css
@@ -1,10 +1,27 @@
-#vk, #youtube {
+.block {
     width: 200px;
     height: 30px;
     display: flex;
+    align-items: center;
+    border: 2px outset black;
+    margin-bottom: 5px;
 }
 
-#vkTime, #youtubeTime {
+.watch {
     display: flex;
     flex-direction: row;
+    margin-left: auto;
+    margin-right: 5px;
+}
+
+.watch p {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.title {
+    font-size: 14px;
+    font-weight: bold;
+    color: rgb(0, 43, 134);
+    margin-left: 5px;
 }
